--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,22 @@
             <artifactId>pagehelper</artifactId>
             <version>4.2.1</version>
         </dependency>
+
+
+<!--        json-->
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
         <!--阿里 FastJson依赖-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <version>1.2.61</version>
+<!--            <version>1.2.47</version>-->
         </dependency>
         <!--阿里 Druid Spring Boot Starter依赖-->
         <dependency>
